--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <ul>
             <li><a href="">HOME</a></li>
             <li><a href="#prevent">Prevention Tips</a></li>
-            <li><a href="">Donate Now</a></li>
-            <li><a href="">Contact Us!</a></li>
+            <li><a href="donate.html">Donate Now</a></li>
         </ul>
     </nav>
 
@@ -63,7 +62,7 @@
 
     <div class="container content" id="fullpage">
         <div class="leftContent">
-            <img src="./asset/svg/2.svg" alt="">
+            <img src="./asset/svg/4.svg" alt="">
         </div>
         <div class="rightContent">
             <h1>If you have a fever and/or cough you should stay at home regardless of your travel or contact history</h1>
@@ -150,15 +149,62 @@
         </div>
     </div>
 
+    <div class="contianer">
+        <div class="symptoms">
+            <h1>The Symptoms</h1>
+            <div class="symptomsInfo">
+
+                <!-- FIRST -->
+                <div class="infoz firstInfo">
+
+                    <h3>Most common symptoms</h3>
+                    <ul>
+                        <li>fever</li>
+                        <li>dry cough</li>
+                        <li>tiredness</li>
+                    </ul>
+                </div>
+                <div class="infoz secondInfo">
+
+                    <h3>Less common symptoms</h3>
+                    <ul>
+                        <li>aches and pains</li>
+                        <li>sore throat</li>
+                        <li>diarrhoea</li>
+                        <li>conjunctivitis</li>
+                        <li> headache</li>
+                        <li>loss of taste or smell</li>
+                        <li>a rash on skin, or discolouration of fingers or toes</li>
+                    </ul>
+                </div>
+                <div class="infoz thirdInfo">
+
+                    <h3>Serious symptoms</h3>
+                    <ul>
+                        <li>difficulty breathing or shortness of breath</li>
+                        <li>chest pain or pressure</li>
+                        <li>loss of speech or movement</li>
+                    </ul>
+                </div>
+            </div>
+
+            <img src="./asset/svg/5.svg" alt="" class="infoSVG">
+        </div>
+    </div>
+
+
     <div class="container donation">
-        <div class="donate">
-            <h3>Want to be tested?</h3>
-            <button class="mainBtn">Contact Us!</button>
+        <div class="donate tested">
+            <img src="./asset/svg/2.svg" alt="" class="testImg">
+            <div class="testDivider">
+                <h3>Want to be tested?</h3>
+                <button class="mainBtn">Contact Us!</button>
+            </div>
         </div>
     </div>
 
     <footer>
-        <div class="date"><p>JoemarBuen ©</p><p id="copyDate"></p></div>
+        <div class="date"><p id="curDate"></p></div>
     </footer>
 
     <!-- SCRIPTS -->
