--- a/donate.html
+++ b/donate.html
@@ -8,18 +8,15 @@
     <link rel="stylesheet" href="./css/other.css">
 </head>
 <body>
-    <nav>
-        <div class="backBtn">
-            <button class="btn fas fa-chevron-left"><a href="index.html">Back</a></button>
-            <!-- <a href="/index.html"></a><input type="button" class="btn fas fa-chevron-left"></a> -->
-            
-        </div>
 
-    </nav>
 
         <div class="float">
-            <!-- <button class="btn fas fa-phone floatingContact"></button> -->
             <popup-notify></popup-notify>
+
+        </div>
+
+        <div class="backBtn">
+            <button class="btn fas fa-chevron-left" id="buttonBack"></button>
         </div>
 
     <div class="donateNow">
@@ -65,6 +62,7 @@
             <button class="btn fas fa-hand-holding-medical"></button>
         </div>
     </div>
+
 
     <script src="./js/btn.js"></script>
 </body>
